--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "alembic>=1.16.4",
+    "email-validator>=2.2.0",
     "fastapi>=0.116.1",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.10.1",
     "pymilvus>=2.6.0",
     "python-dotenv>=1.1.1",
     "python-jose>=3.5.0",
