--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,14 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
