--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,11 @@
-# Postgresql
+# 数据库配置
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
 DB_NAME=
+
+# JWT 配置
+SECRET_KEY=
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
