--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "alembic>=1.16.4",
     "celery>=5.5.3",
+    "cryptography>=45.0.6",
     "email-validator>=2.2.0",
     "fastapi>=0.116.1",
     "fastapi-static-digest>=1.1.0",
