--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi-static-digest>=1.1.0",
     "fastapi-users[sqlalchemy]>=14.0.1",
     "httpx>=0.28.1",
+    "ollama>=0.5.3",
     "openai>=1.102.0",
     "pandas>=2.3.2",
     "passlib[bcrypt]>=1.7.4",
@@ -21,6 +22,7 @@ dependencies = [
     "pymilvus>=2.6.0",
     "python-dotenv>=1.1.1",
     "python-jose>=3.5.0",
+    "qianfan>=0.4.12.3",
     "redis>=6.4.0",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.35.0",
