--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,12 +29,14 @@
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
+    "next-themes": "^0.4.6",
     "node-forge": "^1.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
